# pdf_extractor

./: .gitignore  README.md  application.spec  pyproject.toml
notebooks/plaground/: playground.ipynb
scripts/: application.py
