[tool.poetry]
name = "pdf-extractor"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pypdf2 = "^3.0.1"
pdfplumber = "^0.11.4"
pandas = "^2.2.3"
tabulate = "^0.9.0"
pymupdf = "^1.24.13"
pytesseract = "^0.3.13"
tqdm = "^4.66.6"
pyinstaller = "^6.11.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.29.0"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
