[tool.poetry]
name = "pdf-extractor"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pdfplumber = "^0.11.4"
pandas = "^2.2.3"
tqdm = "^4.66.6"

[tool.poetry.group.dev.dependencies]
ipython = "^8.29.0"
ipykernel = "^6.29.5"
pyinstaller = "^6.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pdfTableExtractor = "scripts.application:main"